--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -124,11 +124,11 @@
         padding-top: 50%;
         max-height: 800px;
         margin-top: 46px;
-        background-image: url(/assests/img/slide/slide2.jpg);
         position: relative;
         background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
+        background-image: url(../img/slide/slide1.jpg);
     }
     /* .slide-item {
         width: 100 vw;
@@ -243,7 +243,7 @@
     
     .section-heading {
         font-size: 25px;
-        letter-spacing: 14px;
+        letter-spacing: 6px;
         text-align: center;
     }
     
@@ -263,7 +263,7 @@
     
     .member-list {
         margin-top: 60px;
-        margin-bottom: 60px;
+        /*  margin-bottom: 60px; */
         display: flex;
     }
     
